--- a/src/app/about/about.component.html
+++ b/src/app/about/about.component.html
@@ -8,7 +8,7 @@
                             <div class="row">
                                 <div class="col-sm-6 col-md-5">
                                     <div class="about-img">
-                                        <img src="/assets/images/IMG_8619.jpg" alt="Person" class="img-fluid rounded b-shadow-a">
+                                        <img src="docs/assets/images/IMG_8619.jpg" alt="Person" class="img-fluid rounded b-shadow-a">
                                     </div>
     
                                 </div>
